# floodarchive.github.io

./: LICENSE.txt  README.md  build.py  floodarchive_state.json  index.html  pyproject.toml  requirements.txt
.github/workflows/: main.yml
src/floodarchive/: cli.py  main.py
src/floodarchive/static/: style.css
src/floodarchive/templates/: base.html  post.html
static/: style.css
templates/: base.html  post.html
