[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "floodarchive"
dynamic = ["version", "readme"]
description = ""
requires-python = ">=3.9"
license = "MIT"
keywords = []
authors = []
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = ["requests==2.32.5", "jinja2==3.1.6", "markdown==3.10.1"]

[project.urls]
Source = "https://github.com/floodarchive/floodarchive.github.io"

[tool.hatch.version]
path = "src/floodarchive/__about__.py"

[project.scripts]
floodarchive = "floodarchive.main:main"
